lib_LTLIBRARIES += %D%/libmisfits.la

%C%_libmisfits_la_CPPFLAGS = $(AM_CPPFLAGS)

%C%_libmisfits_la_SOURCES =			\
			%D%/columninfo.cc	\
			%D%/columninfo.hpp	\
			%D%/extent.cc		\
			%D%/exception.cc	\
			%D%/extent.hpp		\
			%D%/fits.cc		\
			%D%/fits.hpp		\
			%D%/hdu.cc		\
			%D%/hdu.hpp		\
			%D%/row.cc		\
			%D%/row.hpp		\
			%D%/table.cc		\
			%D%/table.hpp		\
			%D%/types.cc		\
			%D%/types.hpp

nobase_include_HEADERS	+= 			\
			%D%/config.hpp		\
			%D%/columninfo.hpp	\
			%D%/extent.hpp		\
			%D%/fits.hpp		\
			%D%/hdu.hpp		\
			%D%/row.hpp		\
			%D%/table.hpp		\
			%D%/types.hpp
