lib_LTLIBRARIES += %D%/libmisfits.la

%C%_libmisfits_la_CPPFLAGS = $(AM_CPPFLAGS)
%C%_libmisfits_la_CXXFLAGS = $(AM_CXXFLAGS)

%C%_libmisfits_la_SOURCES =			\
			%D%/bitset.cc	\
			%D%/bitset.hpp	\
			%D%/columninfo.cc	\
			%D%/columninfo.hpp	\
			%D%/extent.cc		\
			%D%/exception.cc	\
			%D%/exception.hpp	\
			%D%/extent.hpp		\
			%D%/fits.cc		\
			%D%/fits.hpp		\
			%D%/fits_p.hpp		\
			%D%/hdu.cc		\
			%D%/hdu.hpp		\
			%D%/keyword.cc		\
			%D%/keyword.hpp		\
			%D%/row.cc		\
			%D%/row.hpp		\
			%D%/table.cc		\
			%D%/table.hpp		\
			%D%/types.cc		\
			%D%/types.hpp

nobase_include_HEADERS	+= 			\
			%D%/bitset.hpp		\
			%D%/config.hpp		\
			%D%/columninfo.hpp	\
			%D%/exception.hpp	\
			%D%/extent.hpp		\
			%D%/fits.hpp		\
			%D%/hdu.hpp		\
			%D%/keyword.hpp		\
			%D%/row.hpp		\
			%D%/table.hpp		\
			%D%/types.hpp
